# canvas-dl

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_canvas.py
src/canvas_dl/: api.py  cli.py  config.py  download.py  merge.py  utils.py
src/canvas_dl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_merge.py  test_pagination.py
